# bokio-company-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  shell.nix
src/bokio_mcp/: client.py  server.py  settings.py
tests/: conftest.py  test_credit_notes.py  test_customers.py  test_invoices.py  test_items.py  test_journal_entries.py  test_new_endpoints.py  test_uploads_and_fiscal_years.py
